--- a/app/partials/modalBuscarPessoa.html
+++ b/app/partials/modalBuscarPessoa.html
@@ -30,7 +30,7 @@
       <br>
       <div class="row">
         <div class="col-md-12">
-          <table class="tabela tabela-bordered" style="width: 100%" id="tabela-buscar-pessoas">
+          <table class="tabela tabela-bordered tabela-selecionavel" style="width: 100%" id="tabela-buscar-pessoas">
             <thead>
             <tr>
               <th>Cód</th>
