--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -358,7 +358,7 @@
       <button class="btn-orcamento" ng-click="orcamento.salvar()"><span class="glyphicon glyphicon-floppy-disk"></span> Salvar</button>
     </div>
     <div class="col-sm-6 col-md-3">
-      <button class="btn-orcamento" ng-click="orcamento.limpar()"><span class="glyphicon glyphicon-erase"></span> Limpar</button>
+      <button class="btn-orcamento" ng-click="orcamento.limpar(true)"><span class="glyphicon glyphicon-erase"></span> Limpar</button>
     </div>
   </div>
 
