--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -1,9 +1,13 @@
 #menu-home {
-
+  .remove-padding {
+    > div {
+      padding: 8px;
+    }
+  }
 }
 
 .botao-menu {
-  margin: 14px 0;
+  //margin: 14px 0;
   width: 100%;
   height: 200px;
   text-align: center;
@@ -12,15 +16,40 @@
   background-color: $cor-principal;
   color: white;
   @extend .sombra;
+
+  span {
+    font-size: 2em;
+    margin-bottom: 40px;
+  }
 }
 
-.botao-menu:hover {
-  top: -10px;
-  box-shadow: 0px 12px 14px #999;
-  @extend .highlight;
-}
-
-.botao-menu span {
+.botao-menu-barra {
+  //margin: 14px 0;
+  width: 100%;
+  height: 100px;
+  text-align: center;
   font-size: 2em;
-  margin-bottom: 40px;
+  position: relative;
+  background-color: $cor-principal;
+  color: white;
+  display: inline-block;
+  @extend .sombra;
+
+  span {
+    display: inline-block;
+    font-size: 2em;
+    vertical-align: -30%;
+  }
+
+  p {
+    margin: 0;
+  }
+}
+
+.botao-menu:hover, .botao-menu-barra:hover {
+  top: -10px;
+  -webkit-box-shadow: 0 12px 14px $cor-sombra;
+  -moz-box-shadow: 0 12px 14px $cor-sombra;
+  box-shadow: 0 12px 14px $cor-sombra;
+  @extend .highlight;
 }
