--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -39,14 +39,7 @@ body {
   width: 100%;
   margin: 0 auto; }
 
-.center-absolute, .alerta {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px; }
-
-.highlight, .navbar-default .navbar-nav li:hover, .botao-menu:hover, #formulario-orcamento .btn-orcamento:hover {
+.highlight, .navbar-default .navbar-nav li:hover, .botao-menu:hover, .botao-menu-barra:hover, #formulario-orcamento .btn-orcamento:hover {
   -webkit-transition: background-color 0.5s ease;
   -moz-transition: background-color 0.5s ease;
   -ms-transition: background-color 0.5s ease;
@@ -55,10 +48,17 @@ body {
   background-color: #29487d;
   cursor: pointer; }
 
-.sombra, .card, .navbar-default, .botao-menu, #formulario-orcamento .btn-orcamento {
-  -webkit-box-shadow: 0px 2px 4px #999;
-  -moz-box-shadow: 0px 2px 4px #999;
-  box-shadow: 0px 2px 4px #999; }
+.ease-opacity {
+  -webkit-transition: opacity 0.5s ease;
+  -moz-transition: opacity 0.5s ease;
+  -ms-transition: opacity 0.5s ease;
+  -o-transition: opacity 0.5s ease;
+  transition: opacity 0.5s ease; }
+
+.sombra, .card, .navbar-default, .botao-menu, .botao-menu-barra, #formulario-orcamento .btn-orcamento {
+  -webkit-box-shadow: 0 2px 4px rgba(50, 50, 50, 0.35);
+  -moz-box-shadow: 0 2px 4px rgba(50, 50, 50, 0.35);
+  box-shadow: 0 2px 4px rgba(50, 50, 50, 0.35); }
 
 .card {
   background-color: white;
@@ -66,6 +66,10 @@ body {
 
 .alerta {
   position: fixed;
+  top: 0px;
+  right: 0px;
+  left: 0px;
+  text-align: center;
   height: 50px;
   margin: 10px;
   z-index: 100000;
@@ -75,6 +79,65 @@ body {
   box-shadow: 0px 2px 10px #444;
   display: none;
   pointer-events: none; }
+
+.vertical-center {
+  min-height: 100%;
+  /* Fallback for vh unit */
+  min-height: 100vh;
+                     /* You might also want to use
+                        'height' property instead.
+
+                        Note that for percentage values of
+                        'height' or 'min-height' properties,
+                        the 'height' of the parent element
+                        should be specified explicitly.
+
+                        In this case the parent of '.vertical-center'
+                        is the <body> element */
+  /* Make it a flex container */
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  /* Align the bootstrap's container vertically */
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  /* In legacy web browsers such as Firefox 9
+     we need to specify the width of the flex container */
+  width: 100%;
+  /* Also 'margin: 0 auto' doesn't have any effect on flex items in such web browsers
+     hence the bootstrap's container won't be aligned to the center anymore.
+
+     Therefore, we should use the following declarations to get it centered again */
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center; }
+
+.opcoes {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 101;
+  opacity: 0;
+  display: none; }
+  .opcoes .container {
+    width: 100%; }
+  .opcoes .remove-padding > div {
+    padding: 8px; }
+
+.remove-padding {
+  padding: 0; }
 
 .div-display {
   background-color: #6481bb;
@@ -100,9 +163,6 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
 .input-error {
   border: 1px solid #bf0000 !important;
   box-shadow: 0 0 6px #bf0000 !important; }
-
-.alerta {
-  text-align: center; }
 
 .tabela, #tabela-orcamento {
   border: 2px solid #6481bb;
@@ -324,8 +384,10 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   margin: 10px auto;
   background-position: center; }
 
+#menu-home .remove-padding > div {
+  padding: 8px; }
+
 .botao-menu {
-  margin: 14px 0;
   width: 100%;
   height: 200px;
   text-align: center;
@@ -333,14 +395,31 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   position: relative;
   background-color: #3b5998;
   color: white; }
+  .botao-menu span {
+    font-size: 2em;
+    margin-bottom: 40px; }
 
-.botao-menu:hover {
-  top: -10px;
-  box-shadow: 0px 12px 14px #999; }
-
-.botao-menu span {
+.botao-menu-barra {
+  width: 100%;
+  height: 100px;
+  text-align: center;
   font-size: 2em;
-  margin-bottom: 40px; }
+  position: relative;
+  background-color: #3b5998;
+  color: white;
+  display: inline-block; }
+  .botao-menu-barra span {
+    display: inline-block;
+    font-size: 2em;
+    vertical-align: -30%; }
+  .botao-menu-barra p {
+    margin: 0; }
+
+.botao-menu:hover, .botao-menu-barra:hover {
+  top: -10px;
+  -webkit-box-shadow: 0 12px 14px rgba(50, 50, 50, 0.35);
+  -moz-box-shadow: 0 12px 14px rgba(50, 50, 50, 0.35);
+  box-shadow: 0 12px 14px rgba(50, 50, 50, 0.35); }
 
 .dropdown-menu {
   min-width: 200px;
