--- a/app/partials/opcoesOrcamento.html
+++ b/app/partials/opcoesOrcamento.html
@@ -35,8 +35,8 @@
             <div class="centerX centerY">
               <!--<span class="glyphicon glyphicon-paperclip"></span>-->
               <!--<p>Parecer</p>-->
-              <span class="glyphicon glyphicon-save"></span>
-              <p>Arquivar</p>
+              <span class="glyphicon glyphicon-trash"></span>
+              <p>Excluir</p>
             </div>
           </div>
         </div>
