--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -365,3 +365,5 @@
   <div ng-include="'partials/opcoesOrcamento.html'" class="opcoes"></div>
 
 </div>
+
+<div name="impressao" class="impressao" ng-include="'partials/impressaoOrcamento.html'"></div>
