--- a/app/partials/modalBuscarEndereco.html
+++ b/app/partials/modalBuscarEndereco.html
@@ -32,7 +32,7 @@
       <br>
       <div class="row">
         <div class="col-md-12">
-          <table class="tabela tabela-bordered" style="width: 100%">
+          <table class="tabela tabela-bordered tabela-selecionavel" style="width: 100%">
             <thead>
             <tr>
               <th>CEP</th>
