--- a/app/partials/modalPagamento.html
+++ b/app/partials/modalPagamento.html
@@ -32,7 +32,7 @@
       <br>
       <div class="row">
         <div class="col-md-12">
-          <table class="tabela" style="width: 100%" id="tabela-pagamento">
+          <table class="tabela tabela-bordered" style="width: 100%" id="tabela-pagamento">
             <thead>
               <tr>
                 <th>Cód</th>
@@ -99,8 +99,8 @@
   </div>
 
   <div class="footer">
-    <button class="btn btn-default" ng-click="cancel()"><span class="glyphicon glyphicon-remove"></span> Fechar</button>
-    <button class="btn btn-default" ng-click="gravar()"><span class="glyphicon glyphicon-floppy-disk"></span> Gravar</button>
+    <!--<button class="btn btn-default" ng-click="cancel()"><span class="glyphicon glyphicon-remove"></span> Fechar</button>-->
+    <button class="btn btn-default" ng-click="gravar()"><span class="glyphicon glyphicon-ok"></span> Ok</button>
   </div>
 
 </div>
